--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+
+/* *{
+    padding: 0;
+    margin: 0;
+} */
 /* commin font */
 body{
     font-family: 'Open Sans', sans-serif;
@@ -6,10 +11,13 @@ body{
 .primary-color{
     color: #FD6E0A;
 }
+header{
+    background-color: #FFF8F3;
+}
 .navbar{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .nav-title h3{
     color: #181818;
@@ -39,4 +47,13 @@ body{
     border-radius: 5px;
     background: #FD6E0A;
     border: none;
+}
+
+.banner{
+    display: flex;
+    align-items: center;
+    padding: 30px 30px 30px 150px;
+}
+.banner img{
+    width: 500px;
 }
