--- a/style/style.css
+++ b/style/style.css
@@ -217,24 +217,33 @@ line-height: 30px;
 .footer-container{
     display: flex;
     padding: 80px 0px 80px 140px;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 
+}
+.connect, .massege{
+    width: 50%;
+}
+.connect p{
+    max-width: 550px;
 }
 .footer-title{
     color: #181818;
     font-size: 35px;
     font-weight: 700;
 }
-.socal-link ul{
-    list-style: none;
+.socal-link ul {
     display: flex;
+    list-style: none;
+    transform:translateX(-45px);
 }
-/* .socal-link ul li{
+.socal-link ul li{
     padding-right: 20px;
-} */
-.massege input, textarea{
+}
+.massege input[type="text"], .massege input[type="email"], textarea{
     padding: 18px 250px 18px 30px;
-    margin: 30px 0;
+    margin: 10px 0;
+    border: 0;
+    border-radius: 5px;
 }
 /* .massege input{
     
